--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -4,18 +4,25 @@
       <div class="row">
         <div>
           <img
-            src="{{ product.imageUrl }}"
+            src="{{ product && product.imageUrl }}"
             class="img-responsive"
             width="200px"
           />
 
-          <h3>{{ product.name }}</h3>
-          <div class="price">{{ product.unitPrice | currency: "USD" }}</div>
-          <a href="shopping-detail.html" class="primary-btn">Add to cart</a>
-
+          <h3>{{ product && product.name }}</h3>
+          <div class="price">
+            {{ product && product.unitPrice | currency: "USD" }}
+          </div>
+          <button
+            (click)="addToCart(product)"
+            type="button"
+            class="btn btn-primary"
+          >
+            Add to cart
+          </button>
           <h4>Product Description</h4>
           <p>
-            {{ product.description }}
+            {{ product && product.description }}
           </p>
 
           <a routerLink="/products">Back to Product List</a>
