--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -50,8 +50,7 @@
             <div class="items">
               <label>Page Size:</label>
               <select #MyPageSize (change)="doPageSize(MyPageSize.value)">
-                <option selected="true">{{ thePageSize }}</option>
-
+                <option selected="true">10</option>
                 <option>20</option>
                 <option>30</option>
                 <option>40</option>
